css/styles.css
/* ... */
.page-header {
    border-bottom: 1px solid #ECECEC;
}

.container {
    width: 1200px;
    padding-left: 15px;
    padding-right: 15px;
    margin: 0 auto;
    text-align: start;
}

.main-box {
    display: flex;
    align-items: center;
}


a {
    text-decoration:none;
    letter-spacing: 0.02em;
}

.logo {
    color:#000000; 

    font-family: 'Raleway', sans-serif;
    font-size: 26px;
    font-weight:700; 
    line-height: calc(31 / 26);
    letter-spacing: 0.03em;
}

.accent {
    color:var(--accent-color);
}

.accent-studio {
    color: #FFFFFF;
}


.img {
    display:block; 
    max-width: 100%;
}
/*---------- Site Nav ----------*/

.site-nav {
    display: flex;
    margin-left: 92px;
}

.site-nav .item {
    margin-right: 50px;
}

.site-nav .item:last-child{
    margin-right: 0;
}

.site-nav .link{
    position: relative;
    display: block;
    padding-top: 32px;
    padding-bottom: 32px;
    line-height: calc(16 / 14);
    font-weight: 500;
    color:var(--secondary-text-color);
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);

}

.site-nav .link:hover,
.site-nav .link:focus {
    color:var(--accent-color);

}

.site-nav .link.current {
    color:var(--accent-color);
}

.site-nav .link.current::after {
    position: absolute;
    content: "";
    bottom: -1px;
    left: 0;
    width: 100%;
    height: 4px;
    border-radius: 2px;
    background-color:var(--accent-color);
}

/*---------- Auth-nav ----------*/

.auth-nav {
    display: flex;
    margin-left: auto;
    align-items: center;
}

.auth-nav .item + .item {
    padding-left: 50px;
}
.auth-nav .link{
    display: flex;
    align-items: center;
    padding-top: 32px;
    padding-bottom: 32px;

    color:var(--primary-text-color);

    line-height: calc(16 / 14);
    font-weight: 500;

    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);

}

.auth-nav .link:hover,
.auth-nav .link:focus {
    color:var(--accent-color);
}


.icon {
    margin-right: 10px;
    fill: currentColor;
}


/*---------- Section HERO ----------*/

.hero {
    padding-top: 200px; 
    padding-bottom: 200px; 
    text-align: center;
    background-repeat: no-repeat; 
    background-position: center; 
    background-size: cover;
}

.overlay {
    max-width: 1600px;
    height: 600px;
    margin-left: auto;
    margin-right: auto;
    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/team.jpg);
}

.hero-title {
    margin-bottom: 30px;
    color:#FFFFFF;

    text-align: center;

    font-size: 44px;
    font-weight: 900;
    line-height: calc(60 / 44);
    text-transform: uppercase;
    letter-spacing: 0.06em;
}

/*---------- Hero Button ----------*/
.body {
    position: relative;
}
.button {
    border: solid transparent;
    border-radius: 4px;
    padding: 6px 28px;
    min-width: 216px;
    text-align: center;

    background-color: var(--accent-color);
    color:#FFFFFF;

    font-family: 'Roboto', sans-serif;
    font-size: 16px;
    font-weight: 900;
    cursor: pointer;
    line-height: calc(30 / 16);
    letter-spacing: 0.06em;

    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);

}

.button:hover,
.button:focus {
    background-color: #188CE8;
}

/* Backdrop menu  */

.backdrop {
    position: fixed;
    top:0;
    left:0;
    width: 100%;
    height: 100%;
    background-color:rgba(0, 0, 0, 0.2);

    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.modal {
    position: absolute;
    top: 50%;
    left: 50%;
    min-width: 528px;
    min-height: 581px;
    border-radius: 4px;
    background-color:#FFFFFF;
    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
    transform: translate(-50%,-50%) scale(1);
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
    padding: 40px;

} 

.close-button {
    position: absolute;
    top: 8px;
    right: 8px;

    display: flex;
    align-items: center;
    justify-content: center;
    width: 30px;
    height: 30px;
    border-radius: 50%;
    border: 1px solid rgba(0, 0, 0, 0.1);
    background: #FFFFFF;
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    padding: 0;
    cursor: pointer;
}

.close-button:hover,
.close-button:focus {
    fill: var(--accent-color);
}

.is-hidden {
    opacity: 0;
    visibility: hidden;
    pointer-events: none;
}

.backdrop.is-hidden .modal {
    transform: translate(-50%, -50%) scale(0);
}

.modal-title {
    font-weight: 700;
    font-size: 20px;
    line-height: calc(23 / 14);
    color:var(--secondary-text-color);
    margin-bottom: 12px;
}

.modal-field {
    margin-bottom: 10px;
    }

.input-label {
    display: block;
    position: relative;
    text-align: start;
    margin-bottom: 4px;
    font-style: normal;
    font-size: 12px;
    line-height: calc(14 / 12);
    letter-spacing: 0.01em;
    color: #757575;
}

.input-wrapper {
    position: relative;
}

.modal-input {
    width: 100%;
    height: 40px;
    border: 1px solid rgba(33, 33, 33, 0.2);
    background-color: transparent;
    outline: transparent;
    border-radius: 4px;
    padding-left: 42px;
    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);

}

.modal-icon {
    position: absolute;
    left: 15px;
    top:50%;
    transform:translateY(-50%);
    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
}   


.modal-input:focus {
    border-color: var(--accent-color);

}

.modal-input:focus + .modal-icon {
    fill: var(--accent-color);

}


.textarea-comment {
    width: 100%;
    height: 138px;
    border-radius: 4px;
    border: 1px solid rgba(33, 33, 33, 0.2);
    padding-left: 16px;
    padding-top: 12px;
    resize: none;
    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
}


.textarea-comment::placeholder {

    font-size: 12px;
    line-height: calc(14 / 12);
    letter-spacing: 0.01em;

    color: rgba(117, 117, 117, 0.5);
}
/* ... */

